--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,13 +9,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Task Manager</a>
+                <a class="navbar-brand" routerLink="/home">Task Manager</a>
             </div>
 
             <div>
               <ul class="nav navbar-nav">
-                <li>
-                  <a href="#about">About</a>
+                <li routerLinkActive="active">
+                  <a routerLink="/about">About</a>
                 </li>
               </ul>
             </div>
@@ -23,6 +23,11 @@
         </nav>
 
         <div class="container">
+          <router-outlet
+            #routerOutlet="outlet"
+            (activate)="onActivate($event, routerOutlet)"
+            (deactivate)="onDeactivate($event, routerOutlet)"
+          ></router-outlet>
           
         </div>
     </div> 
